# Levo

./: .gitignore  LICENSE  NOTICE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs
src-tauri/src/ffmpeg/: mod.rs
src/components/: DropZone.tsx  FFmpegPreview.tsx  PresetBar.tsx  QueuePanel.tsx  SettingsPanel.tsx  ThemeToggle.tsx  UpdateDialog.tsx
src/components/ui/: index.tsx
src/lib/: ffmpegBuilder.ts  formats.ts  presets.ts  types.ts  utils.ts
src/stores/: queueStore.ts  settingsStore.ts  themeStore.ts
