[package]
name = "ffmpegui"
version = "0.2.0"
description = "FFmpeg GUI Desktop Application"
authors = []
license = "MIT"
repository = "https://github.com/dario-zenhaeusern/Levo"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ffmpegui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one at a time so the compiler can optimize better
lto = true        # Enables link-time-optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Automatically strip symbols from the binary
